@@ -283,10 +283,6 @@
 
       <li><a name='server'>Install the server software for the web</a>
         <ol>
-          <li>Unzip common-lib.zip, this will create two jar files</li>
-          
-          <li>Copy the files xercesImpl.jar and xmlParserAPIs.jar from the directory fll on the cd to c:\packages\tomcat\common\lib</li>
-          
           <li>Unzip the file web.zip to c:\packages\tomcat\webapps</li>
 
           <li>If you want to use a different welcome logo than the one
